[package]
name = "sdrmm"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/mercurialworld/sdrmm"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }
config = "0.15.13"
num = "0.4.3"
reqwest = "0.12.22"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.5.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
